welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:12: error: illegal start of simple expression
while (!estSurBiscuit)}
                      ^Balin:20: error: Unmatched closing brace '}' ignored here
	}
        ^Balin:21: error: eof expected but '}' found.
}
^